# block-submission-service

./: .env.example  Cargo.toml  Dockerfile  Dockerfile.sim  LICENSE  README.md  docker-compose.yml
.github/workflows/: build.yaml  check-lint-test.yaml
src/: block_submission_key.rs  block_submissions.rs  env.rs  lib.rs  main.rs  operational_constants.rs  performance.rs  server.rs  storage.rs
src/block_submission_consumer/: decode.rs  mod.rs
src/consumer/: decode.rs  mod.rs
src/health/: mod.rs  redis_consumer.rs
tests/: integration.rs  mod.rs
