[package]
name = "block-submission-service"
version = "1.1.0"
edition = "2021"
default-run = "block-submission-service"

[[bin]]
name = "block-submission-service"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1.0.75", default-features = false, features = [
	"backtrace",
	"std",
] }
axum = { version = "0.6.20", default-features = false, features = [
	"http1",
	"http2",
	"json",
	"matched-path",
	"tokio",
] }
bytes = "1.5.0"
bytes-utils = "0.1.3"
lazy_static = { version = "1.4.0", default-features = false }
fred = { version = "6.3.1", default-features = false }
futures = { version = "0.3.28", default-features = false }
tokio = { version = "1.32.0", features = [
	"macros",
	"rt-multi-thread",
	"sync",
	"time",
] }
tracing = { version = "0.1.37", default-features = false }
tracing-subscriber = { version = "0.3.17", default-features = false, features = [
	"ansi",
	"env-filter",
	"fmt",
	"json",
] }
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.106"
flate2 = { version = "1.0.27" }
